[gd_scene load_steps=4 format=2]

[ext_resource path="res://scene/ItemList.gd" type="Script" id=1]
[ext_resource path="res://scene/Inventory.gd" type="Script" id=2]
[ext_resource path="res://Resources/fonts/alagard.tres" type="DynamicFont" id=3]

[node name="Inventory" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="."]
margin_left = 264.0
margin_top = 104.0
margin_right = 472.0
margin_bottom = 144.0
allow_reselect = true
max_text_lines = 4
auto_height = true
max_columns = 19
same_column_width = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 264.0
margin_right = 448.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
color = Color( 0.192157, 0.192157, 0.192157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ColorRect"]
margin_right = 25.0
margin_bottom = 25.0
rect_min_size = Vector2( 32, 32 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_name" type="Label" parent="ColorRect"]
margin_left = 48.0
margin_top = 8.0
margin_right = 176.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 3 )
text = "Item name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_description" type="Label" parent="ColorRect"]
margin_left = 48.0
margin_top = 32.0
margin_right = 176.0
margin_bottom = 96.0
text = "Item description"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="item_selected" from="ItemList" to="ItemList" method="_on_ItemList_item_selected"]
